css: Fix missing border around the search editor's cancel button

--- a/asset/css/search-editor.less
+++ b/asset/css/search-editor.less
@@ -31,8 +31,11 @@
 
   button, input[type="submit"] {
     .appearance(none);
-    border: none;
     background: none;
+
+    &:not(.cancel-button) {
+      border: none;
+    }
   }
 
   i.icon:before {
